chore: apply RBAC optimizations and remove deprecated tests
- Refactor PackageController and RoleServiceImpl with improved RBAC logic
- Remove PackagePermissionController (consolidated into PackageController)
- Delete outdated test files (PackageServiceTest, RolePermissionValidationTest, etc.)
- Add RequirePerm annotation to common module
- Add TestRedisConfig for integration tests
- Update database schema files
- Update openspec task files

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>